# mogged.tv

./: .gitignore  Makefile  README.md  claude.md
backend/: .env.example  Dockerfile  Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 37851551c6b9_fix_stream_enum_values.py  3bb3d24aeac5_fix_lowercase_enum_values.py  41051dc39d36_add_trivia_tables.py  5d157b105db3_add_missing_columns_and_tables.py  694f1f004c09_merge_heads.py  7e6330ab1ac8_initial_schema.py  a1b2c3d4e5f6_add_secret_slug_remove_public.py
backend/scripts/: clear_streams.py
backend/src/: main.py
backend/src/auth/: dependencies.py  exceptions.py  repository.py  router.py  schemas.py  service.py
backend/src/core/: config.py  database.py  exceptions.py  models.py  repository.py  security.py
backend/src/friends/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/organizations/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/streams/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/trivia/: constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  seed.py  service.py
backend/src/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_all_endpoints.py
frontend/: CLAUDE.md  Makefile  index.html  openapi-ts.config.ts  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
(+65 files in other folders)
